// Licensed to the Apache Software Foundation (ASF) under one or more
// contributor license agreements.  See the NOTICE file distributed with
// this work for additional information regarding copyright ownership.
// The ASF licenses this file to You under the Apache License, Version 2.0
// (the "License"); you may not use this file except in compliance with
// the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package echo;

option go_package = "github.com/apache/dubbo-kubernetes/test/grpc-app/proto";

// Echo service for testing gRPC proxyless
service EchoService {
  // Echo returns the same message sent
  rpc Echo(EchoRequest) returns (EchoResponse);
  
  // StreamEcho streams back the same message
  rpc StreamEcho(EchoRequest) returns (stream EchoResponse);
}

// EchoTestService for grpcurl testing (similar to Istio's echo service)
service EchoTestService {
  // ForwardEcho forwards a request to another service and returns the response
  rpc ForwardEcho(ForwardEchoRequest) returns (ForwardEchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
  string hostname = 2;
}

message ForwardEchoRequest {
  string url = 1;  // Target URL (e.g., "xds:///consumer.grpc-app.svc.cluster.local:7070")
  int32 count = 2; // Number of requests to send
  map<string, string> headers = 3;
  int32 timeout = 4; // Timeout in seconds
  bool h2 = 5; // Use HTTP/2
  bool insecure = 6; // Use insecure connection
}

message ForwardEchoResponse {
  repeated string output = 1; // Output lines from the requests
}
